--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -20,7 +20,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
    */
 
   /* Application theme */
-
+@font-family
   :root {
     --dark-primary-color: #303F9F;
     --default-primary-color: #3F51B5;
