--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -20,7 +20,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
    */
 
   /* Application theme */
-@font-family
+  /*AKTIV-GROTESK FONT*/
+  @font-face{
+      font-family: 'aktivgrotesk';
+      src: url('aktivgrotesk.ttf');
+    }
+
   :root {
     --dark-primary-color: #303F9F;
     --default-primary-color: #3F51B5;
@@ -87,7 +92,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     -ms-flex-align: center;
     -webkit-align-items: center;
     align-items: center;
-    font-family: 'Roboto', 'Noto', sans-serif;
+    font-family: 'aktivgrotesk', 'Noto', sans-serif;
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
     font-size: 14px;
