--- a/app/index.html
+++ b/app/index.html
@@ -115,7 +115,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <div class="content">
           <iron-pages attr-for-selected="data-route" selected="{{route}}">
 
-            <section data-route="home">
+            <splash-page data-route='home'></splash-page>
+
+            <section>
               <paper-material elevation="1">
                 <my-greeting></my-greeting>
 
