--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -23,7 +23,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   /*AKTIV-GROTESK FONT*/
   @font-face{
       font-family: 'aktivgrotesk';
-      src: url('aktivgrotesk.ttf');
+      src: url('fonts/aktivgrotesk.ttf');
     }
 
   :root {
