--- a/app/elements/splash-page/splash-page.html
+++ b/app/elements/splash-page/splash-page.html
@@ -16,16 +16,21 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <style>
       :host {
         display: block;
+        @apply(--layout-horizontal);
+        @apply(--layout-wrap);
       }
     </style>
     <interest-card user-type='Music Lover' img-url='../../images/listeners.png'>
-        <span>Are you a Music Lover?</span>
+        <span id='title'>Are you a Music Lover?</span>
+        <span id='button'>Share Music and Create an Experience</span>
     </interest-card>
     <interest-card user-type='DJ' img-url='../../images/djs.png'>
-        <span>Are you a DJ?</span>
+        <span id='title'>Are you a DJ?</span>
+        <span id='button'>Get Real-Time Feedback On Your Sets Seamlessly</span>
     </interest-card>
     <interest-card user-type='fitness' img-url='../../images/fitness.jpg'>
-        <span>Are you part of an Fitness Group?</span>
+        <span id='title'>Are you part of an Fitness Group?</span>
+        <span id='button'>Create Synced Playlist With Your Workout Buddies</span>
     </interest-card>
   </template>
   <script>
