added click handler and change user-type assignments

--- a/app/elements/interest-card/interest-card.html
+++ b/app/elements/interest-card/interest-card.html
@@ -32,7 +32,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <paper-material class='layout vertical'>
       <content select='#title' class='self-center'></content>
       <iron-image src='{{imgUrl}}' height='256' width='256' sizing='contain' class='self-center'></iron-image>
-      <div id='button' class='ui button'>
+      <div id='button' class='ui button' on-click='_btnClick'>
         <button class='ui button'><content select='#button' class='self-center'></content></button>
       </div>
 
@@ -54,6 +54,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         imgUrl: {type: String, value: '../../images/placeholder.png', notify: true},
         userType: {type: String, value: 'User Type', notify: true},
         elementName: {type: String, value: 'interest-card', notify: true}
+      },
+      _btnClick: function(e){
+        
       }
     });
   })();
