--- a/app/elements/splash-page/splash-page.html
+++ b/app/elements/splash-page/splash-page.html
@@ -20,15 +20,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         @apply(--layout-wrap);
       }
     </style>
-    <interest-card user-type='Music Lover' img-url='../../images/listeners.png'>
+    <interest-card user-type='musiclovers' img-url='../../images/listeners.png'>
         <span id='title'>Are you a Music Lover?</span>
         <span id='button'>Share Music and Create an Experience</span>
     </interest-card>
-    <interest-card user-type='DJ' img-url='../../images/djs.png'>
+    <interest-card user-type='djs' img-url='../../images/djs.png'>
         <span id='title'>Are you a DJ?</span>
         <span id='button'>Get Real-Time Feedback On Your Sets Seamlessly</span>
     </interest-card>
-    <interest-card user-type='fitness' img-url='../../images/fitness.jpg'>
+    <interest-card user-type='activegroups' img-url='../../images/fitness.jpg'>
         <span id='title'>Are you part of an Fitness Group?</span>
         <span id='button'>Create Synced Playlist With Your Workout Buddies</span>
     </interest-card>
