--- a/app/index.html
+++ b/app/index.html
@@ -118,7 +118,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <iron-pages attr-for-selected="data-route" selected="{{route}}">
 
             <splash-page data-route='home'></splash-page>
-            <interest-page data-route='interest/:archetype'></interest-page>
+            <interest-page data-route='interest' archetype='{{params.archetype}}'></interest-page>
             <section>
               <paper-material elevation="1">
                 <my-greeting></my-greeting>
