--- a/app/elements/interest-card/interest-card.html
+++ b/app/elements/interest-card/interest-card.html
@@ -52,11 +52,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       },
       properties: {
         imgUrl: {type: String, value: '../../images/placeholder.png', notify: true},
-        userType: {type: String, value: 'User Type', notify: true},
+        archetype: {type: String, value: 'archetype', notify: true},
         elementName: {type: String, value: 'interest-card', notify: true}
       },
       _btnClick: function(e){
-        
+        page('/interest/'+this.archetype);
       }
     });
   })();
