--- a/app/elements/interest-page/interest-page.html
+++ b/app/elements/interest-page/interest-page.html
@@ -10,6 +10,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/iron-input/iron-input.html">
+<link rel="import" href="../../bower_components/firebase-element/firebase-document.html">
 
 <dom-module id="interest-page">
   <template>
@@ -40,6 +41,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-size:1.2em;
       }
     </style>
+    <firebase-document id='fb' location='https://trysoundcrowd.firebaseio.com/'
+      on-firebase-value='_storeSnapshot'></firebase-document>
+
     <div id='header' class='self-center'>
       <span>Hello <span>{{userType}}</span></span>
     </div>
@@ -48,7 +52,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </p>
     <div id='input' class="ui action input">
       <input is='iron-input' type="text" placeholder="iminterested@gmail.com" bind-value='{{email}}'>
-      <button id='submitBtn' class="ui button invalid">You have my attention</button>
+      <button id='submitBtn' class="ui button invalid" on-click='_onSubmit' disabled$='{{!isEmailValid}}'>You have my attention</button>
     </div>
   </template>
   <script>
@@ -65,16 +69,30 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       listeners:{
       },
       properties: {
+        uid: {type: String, notify: true},
+        isEmailValid: {type: Boolean, value: false, notify: true},
+        snapshot: {type: Object, notify: true},
         email: {type: String, notify: true, observer: '_emailChanged'},
         userType: {type: String, value: 'archetype', notify: true,computed: '_userType(archetype)'},
         archetype: {type: String, value: 'archetype', notify: true},
         elementName: {type: String, value: 'interest-page', notify: true}
       },
+      _onSubmit: function(e){
+        if(this.isEmailValid){
+          console.log('submitting ', this.email);
+          var emailRef = this.snapshot.child('emails').child(this.archetype).ref().push(this.email);
+          this.uid = emailRef.key();
+          console.log(this.uid);
+        }
+      },
+      _storeSnapshot: function(e, snapshot){
+        this.snapshot = snapshot;
+      },
       _emailChanged: function(email){
         var re = /^\S+@\S+\.\S+$/;
-        var valid = re.test(email);
-        console.log(valid);
-        if(valid){
+        this.isEmailValid = re.test(email);
+        console.log(this.isEmailValid);
+        if(this.isEmailValid){
           this.toggleClass('valid', true, this.$.submitBtn);
           this.toggleClass('invalid', false, this.$.submitBtn);
         } else {
