styled interest-cards

--- a/app/elements/splash-page/splash-page.html
+++ b/app/elements/splash-page/splash-page.html
@@ -30,7 +30,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </interest-card>
     <interest-card archetype='activegroups' img-url='../../images/fitness.jpg'>
         <span id='title'>Are you part of an Fitness Group?</span>
-        <span id='button'>Create Synced Playlist With Your Workout Buddies</span>
+        <span id='button'>Create Synced Playlists With Your Workout Buddies</span>
     </interest-card>
   </template>
   <script>
