--- a/app/elements/interest-card/interest-card.html
+++ b/app/elements/interest-card/interest-card.html
@@ -19,7 +19,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-family: 'aktivgrotesk';
         width: 300px;
         max-height: 444px;
-        margin: 12px 12px;
+        margin: 24px 24px;
+      }
+      ::content #title{
+        font-size:1.5em;
+        text-align:center;
+      }
+      paper-material{
+        padding: 24px 24px;
       }
       #button{
         background: var(--accent-color);
