fitting interest-card content

--- a/app/elements/splash-page/splash-page.html
+++ b/app/elements/splash-page/splash-page.html
@@ -29,7 +29,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <span id='button'>Get Real-Time Feedback On Your Sets Seamlessly</span>
     </interest-card>
     <interest-card archetype='activegroups' img-url='../../images/fitness.jpg'>
-        <span id='title'>Are you part of an Fitness Group?</span>
+        <span id='title'>Are you part of a Fitness Group?</span>
         <span id='button'>Create Synced Playlists With Your Workout Buddies</span>
     </interest-card>
   </template>
