--- a/app/elements/interest-card/interest-card.html
+++ b/app/elements/interest-card/interest-card.html
@@ -32,6 +32,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         background: var(--accent-color);
       }
       button.ui.button{
+        padding: 0px 0px;
         color:white;
         background: transparent;
       }
