--- a/app/index.html
+++ b/app/index.html
@@ -98,8 +98,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <span class="flex"></span>
 
           <!-- Toolbar icons -->
-          <paper-icon-button icon="refresh"></paper-icon-button>
-          <paper-icon-button icon="search"></paper-icon-button>
+          <sc-toolbar></sc-toolbar>
+          <!-- <paper-icon-button icon="refresh"></paper-icon-button> -->
+          <!-- <paper-icon-button icon="search"></paper-icon-button> -->
 
           <!-- Application name -->
           <div class="middle middle-container center horizontal layout">
