--- a/app/elements/interest-card/interest-card.html
+++ b/app/elements/interest-card/interest-card.html
@@ -27,9 +27,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       paper-material{
         padding: 24px 24px;
+        background: white;
       }
       #button{
-        background: var(--accent-color);
+        background: var(--default-primary-color);
       }
       button.ui.button{
         padding: 0px 0px;
