--- a/app/elements/sc-toolbar/sc-toolbar.html
+++ b/app/elements/sc-toolbar/sc-toolbar.html
@@ -17,7 +17,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         display: block;
       }
       div.ui.button{
-        background: var(--accent-color);
+        background: var(--default-primary-color);
       }
       button.ui.button{
         background: transparent;
