--- a/app/elements/splash-page/splash-page.html
+++ b/app/elements/splash-page/splash-page.html
@@ -18,6 +18,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         display: block;
         @apply(--layout-horizontal);
         @apply(--layout-wrap);
+        @apply(--layout-center-justified);
+        background: #ddd;
       }
     </style>
     <interest-card archetype='musiclovers' img-url='../../images/listeners.png'>
