--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -27,8 +27,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
 
   :root {
-    --dark-primary-color: #303F9F;
-    --default-primary-color: #3F51B5;
+    --dark-primary-color: #531f6f;
+    --default-primary-color: #7734C0;
     --light-primary-color: #C5CAE9;
     --text-primary-color: #ffffff; /*text/icons*/
     --accent-color: #FF4081;
@@ -60,6 +60,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   paper-scroll-header-panel {
     height: 100%;
+    --paper-scroll-header-container:{
+      background : #ddd;
+    }
   }
 
   paper-material {
@@ -77,7 +80,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   }
 
   .paper-menu > .iron-selected {
-    color: var(--default-primary-color);
+    color: var(--dark-primary-color);
   }
 
   paper-menu a {
@@ -127,9 +130,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     transform-origin: left center;
   }
 
+  iron-pages{
+    height:100%;
+    padding: 0px 0px;
+  }
+
   /* Height of the scroll area */
   .content {
-    height: 900px;
+    height: 1200px;
+    background: #ddd;
   }
 
   /* Breakpoints */
