--- a/app/elements/splash-page/splash-page.html
+++ b/app/elements/splash-page/splash-page.html
@@ -16,23 +16,24 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <style>
       :host {
         display: block;
-        @apply(--layout-horizontal);
-        @apply(--layout-wrap);
+        @apply(--layout-vertical);
       }
     </style>
-    <interest-card archetype='musiclovers' img-url='../../images/listeners.png'>
-        <span id='title'>Are you a Music Lover?</span>
-        <span id='button'>Share Music and Create an Experience</span>
-    </interest-card>
-    <interest-card archetype='djs' img-url='../../images/djs.png'>
-        <span id='title'>Are you a DJ?</span>
-        <span id='button'>Get Real-Time Feedback On Your Sets Seamlessly</span>
-    </interest-card>
-    <interest-card archetype='activegroups' img-url='../../images/fitness.jpg'>
-        <span id='title'>Are you part of a Fitness Group?</span>
-        <span id='button'>Create Synced Playlists With Your Workout Buddies</span>
-    </interest-card>
-    <sm-handles>
+    <div class='layout horizontal wrap self-center'>
+      <interest-card archetype='musiclovers' img-url='../../images/listeners.png'>
+          <span id='title'>Are you a Music Lover?</span>
+          <span id='button'>Share Music and Create an Experience</span>
+      </interest-card>
+      <interest-card archetype='djs' img-url='../../images/djs.png'>
+          <span id='title'>Are you a DJ?</span>
+          <span id='button'>Get Real-Time Feedback On Your Sets Seamlessly</span>
+      </interest-card>
+      <interest-card archetype='activegroups' img-url='../../images/fitness.jpg'>
+          <span id='title'>Are you part of a Fitness Group?</span>
+          <span id='button'>Create Synced Playlists With Your Workout Buddies</span>
+      </interest-card>
+    </div>
+    <sm-handles class='flex self-center'></sm-handles>
   </template>
   <script>
   (function() {
