center wrap handles. build site into dist.tar.gz

--- a/app/elements/sm-handles/sm-handles.html
+++ b/app/elements/sm-handles/sm-handles.html
@@ -17,6 +17,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         display: block;
         @apply(--layout-horizontal);
         @apply(--layout-wrap);
+        @apply(--layout-center-justified);
       }
       i{
         color:#336699;
