--- a/app/elements/splash-page/splash-page.html
+++ b/app/elements/splash-page/splash-page.html
@@ -20,7 +20,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         @apply(--layout-vertical);
       } 
     </style>
-    <div class='layout horizontal wrap self-center'>
+    <div class='layout horizontal wrap center-justified self-center'>
       <interest-card archetype='musiclovers' img-url='../../images/listeners.png'>
           <span id='title'>Are you a Music Lover?</span>
           <span id='button'>Share Music and Create an Experience</span>
